--- a/client/to-do-XC.html
+++ b/client/to-do-XC.html
@@ -16,13 +16,13 @@
       <section class="comment-input">
         <p>Add Your Comment:</p>
         <input><button>+</button>
+        <p>Delete All Comments:</p>
+        <button>-</button>
       </section>
+
 
       <section class="comments">
         <p><b>To Do List</b></p>
-        <p>Start Project 4</p>
-        <p>Finish Project 4</p>
-        <p>Memorial Day Plans 5/30</p>
       </section>
     </main>
 
@@ -31,6 +31,6 @@
     </footer>
 
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script src="javascripts/to-do.js"></script>
+    <script src="javascripts/to-do-XC.js"></script>
   </body>
 </html>
